--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.x]  # Node.js 버전을 20.x로 변경
+        node-version: [20.x]
 
     steps:
     - uses: actions/checkout@v4
@@ -21,7 +21,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: NODE_OPTIONS=--openssl-legacy-provider npm run build --if-present
-    - run: npm test
+        cache: 'yarn'
+    - run: yarn install  # yarn을 사용하여 의존성 설치
+    - run: yarn build --if-present
+    - run: yarn test
