--- a/package.json
+++ b/package.json
@@ -4,37 +4,37 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.14.0",
-    "@mui/lab": "^5.0.0-alpha.122",
-    "@mui/material": "^5.14.0",
-    "@mui/styled-engine-sc": "^5.14.0",
-    "@types/node": "^20.4.2",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "apexcharts": "^3.41.0",
-    "axios": "^1.4.0",
-    "axios-mock-adapter": "^1.21.2",
-    "date-fns": "^2.30.0",
-    "formik": "^2.4.1",
-    "history": "^5.3.0",
-    "i18next": "^23.4.6",
-    "jsonwebtoken": "^9.0.2",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.1.0",
+    "@mui/lab": "^5.0.0-alpha.54",
+    "@mui/material": "^5.1.0",
+    "@mui/styled-engine-sc": "^5.1.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "apexcharts": "^3.28.3",
+    "axios": "^0.23.0",
+    "axios-mock-adapter": "^1.20.0",
+    "date-fns": "^2.23.0",
+    "formik": "^2.2.9",
+    "history": "5",
+    "i18next": "^21.3.3",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "nprogress": "^0.2.0",
-    "react": "^18.2.0",
-    "react-apexcharts": "^1.4.0",
-    "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
+    "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
+    "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-image-lightbox": "^5.1.4",
-    "react-router-dom": "^6.14.1",
-    "react-scripts": "5.0.1",
-    "react-table": "^7.8.0",
-    "simplebar-react": "^3.2.3",
-    "stylis": "^4.1.3",
-    "typescript": "^5.1.6",
-    "yup": "^1.2.0"
+    "react-router-dom": "6",
+    "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
+    "simplebar-react": "^2.3.5",
+    "stylis": "^4.0.10",
+    "typescript": "^4.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
