--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next": "^21.3.3",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "lst": "^0.1.0",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
@@ -37,9 +38,9 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    "test": "NODE_OPTIONS=--openssl-legacy-provider react-scripts test",
     "eject": "react-scripts eject",
     "fix:prettier": "prettier --write ."
   },
